// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Palettes > Render > shows empty state when no palettes 1`] = `
<div
  class="flex flex-col flex-1"
  data-uid="Palettes"
>
  <div
    class="w-full max-w-7xl mx-auto flex-1 pt-8 md:pt-16 px-4 md:px-8 pb-16 text-center"
  >
    <h1
      class="text-4xl font-bold mb-16"
    >
      My Palettes
    </h1>
    <div
      class="mx-auto text-center w-full max-w-150 p-4"
      data-testid="Feedback"
    >
      <div
        class="flex items-center justify-center"
      >
        <svg
          class="size-16 text-muted"
          fill="currentColor"
          height="1em"
          viewBox="0 0 256 256"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M198.24,62.63l15.68-17.25a8,8,0,0,0-11.84-10.76L186.4,51.86A95.95,95.95,0,0,0,57.76,193.37L42.08,210.62a8,8,0,1,0,11.84,10.76L69.6,204.14A95.95,95.95,0,0,0,198.24,62.63ZM48,128A80,80,0,0,1,175.6,63.75l-107,117.73A79.63,79.63,0,0,1,48,128Zm80,80a79.55,79.55,0,0,1-47.6-15.75l107-117.73A79.95,79.95,0,0,1,128,208Z"
          />
        </svg>
      </div>
      <div
        class="mt-4"
      >
        <h2
          class="font-semibold text-foreground text-xl"
        >
          You have no saved palettes yet.
        </h2>
        <p
          class="text-muted mt-1"
        >
          Create a color palette and click Save to add it here.
        </p>
      </div>
      <div
        class="mt-6"
      >
        <button
          class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-primary text-primary-foreground data-[hover=true]:opacity-hover"
          data-react-aria-pressable="true"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M228,128a12,12,0,0,1-12,12H140v76a12,12,0,0,1-24,0V140H40a12,12,0,0,1,0-24h76V40a12,12,0,0,1,24,0v76h76A12,12,0,0,1,228,128Z"
            />
          </svg>
          Create Palette
        </button>
      </div>
    </div>
  </div>
  <footer
    class="w-full flex items-center justify-center gap-2 flex-wrap p-4 border-t border-default"
    data-uid="Footer"
  >
    <div
      data-uid="Contact"
    >
      <button
        class="text-base"
        type="button"
      >
        Feedback
      </button>
    </div>
    <span
      class="text-foreground-500"
    >
      ·
    </span>
    <a
      data-discover="true"
      href="/about"
    >
      About
    </a>
    <span
      class="text-foreground-500"
    >
      ·
    </span>
    <a
      href="https://x.com/gilbarbara"
      rel="noopener noreferrer"
      target="_blank"
    >
      @gilbarbara
    </a>
  </footer>
</div>
`;

exports[`Palettes > Render > shows loading spinner when fetching palettes 1`] = `
<div
  class="flex flex-col flex-1"
  data-uid="Palettes"
>
  <div
    class="w-full max-w-7xl mx-auto flex-1 pt-8 md:pt-16 px-4 md:px-8 pb-16 text-center"
  >
    <h1
      class="text-4xl font-bold mb-16"
    >
      My Palettes
    </h1>
    <div
      class="mx-auto text-center w-full max-w-150 p-4"
      data-testid="Feedback"
    >
      <div
        class="flex items-center justify-center"
      >
        <div
          aria-label="Loading"
          class="relative inline-flex flex-col gap-2 items-center justify-center"
        >
          <div
            class="relative flex w-10 h-10"
          >
            <i
              class="absolute w-full h-full rounded-full border-3 border-b-primary animate-spinner-ease-spin border-solid border-t-transparent border-l-transparent border-r-transparent"
            />
            <i
              class="absolute w-full h-full rounded-full border-3 border-b-primary opacity-75 animate-spinner-linear-spin border-dotted border-t-transparent border-l-transparent border-r-transparent"
            />
          </div>
        </div>
      </div>
      <div
        class="mt-4"
      >
        <p
          class="text-muted "
        >
          <span
            class="text-foreground-500"
          >
            Loading palettes...
          </span>
        </p>
      </div>
    </div>
  </div>
  <footer
    class="w-full flex items-center justify-center gap-2 flex-wrap p-4 border-t border-default"
    data-uid="Footer"
  >
    <div
      data-uid="Contact"
    >
      <button
        class="text-base"
        type="button"
      >
        Feedback
      </button>
    </div>
    <span
      class="text-foreground-500"
    >
      ·
    </span>
    <a
      data-discover="true"
      href="/about"
    >
      About
    </a>
    <span
      class="text-foreground-500"
    >
      ·
    </span>
    <a
      href="https://x.com/gilbarbara"
      rel="noopener noreferrer"
      target="_blank"
    >
      @gilbarbara
    </a>
  </footer>
</div>
`;

exports[`Palettes > Render > shows palette grid 1`] = `
<div
  class="flex flex-col flex-1"
  data-uid="Palettes"
>
  <div
    class="w-full max-w-7xl mx-auto flex-1 pt-8 md:pt-16 px-4 md:px-8 pb-16 text-center"
  >
    <h1
      class="text-4xl font-bold mb-16"
    >
      My Palettes
    </h1>
    <div
      class="w-full grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4"
    >
      <div
        class="flex flex-col relative overflow-hidden h-auto text-foreground box-border bg-content1 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 shadow-medium rounded-large transition-transform-background motion-reduce:transition-none w-full"
        data-uid="PaletteCard"
        tabindex="-1"
      >
        <div
          class="relative flex w-full flex-auto flex-col place-content-inherit align-items-inherit h-auto break-words text-left overflow-y-auto subpixel-antialiased p-4"
        >
          <div
            class="flex items-start mb-4"
          >
            <div
              class="grow space-y-0.5"
            >
              <h3
                class="font-semibold text-lg"
              >
                <a
                  aria-label="Load Palette (Test Palette)"
                  class="flex hover:underline"
                  data-discover="true"
                  href="/p/red-ff0000/blue-0000ff"
                >
                  Test Palette
                </a>
              </h3>
              <p
                class="text-xs text-default-500"
              >
                Jan 2, 2024
              </p>
            </div>
            <div
              class="flex items-center gap-0.5"
            >
              <button
                aria-label="Favorite Palette (Test Palette)"
                class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 text-tiny gap-2 rounded-small px-0 !gap-0 transition-transform-colors-opacity motion-reduce:transition-none bg-transparent text-default-foreground data-[hover=true]:bg-default/40 min-w-8 w-8 h-8"
                data-react-aria-pressable="true"
                tabindex="0"
                type="button"
              >
                <svg
                  class="size-5"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 256 256"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M178,40c-20.65,0-38.73,8.88-50,23.89C116.73,48.88,98.65,40,78,40a62.07,62.07,0,0,0-62,62c0,70,103.79,126.66,108.21,129a8,8,0,0,0,7.58,0C136.21,228.66,240,172,240,102A62.07,62.07,0,0,0,178,40ZM128,214.8C109.74,204.16,32,155.69,32,102A46.06,46.06,0,0,1,78,56c19.45,0,35.78,10.36,42.6,27a8,8,0,0,0,14.8,0c6.82-16.67,23.15-27,42.6-27a46.06,46.06,0,0,1,46,46C224,155.61,146.24,204.15,128,214.8Z"
                  />
                </svg>
              </button>
              <button
                aria-expanded="false"
                aria-haspopup="dialog"
                aria-label="Remove Palette (Test Palette)"
                class="group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 text-tiny gap-2 rounded-small px-0 !gap-0 transition-transform-colors-opacity motion-reduce:transition-none bg-transparent text-danger data-[hover=true]:bg-danger/20 min-w-8 w-8 h-8 z-10 aria-expanded:scale-[0.97] aria-expanded:opacity-70 subpixel-antialiased"
                data-react-aria-pressable="true"
                data-slot="trigger"
                tabindex="0"
                type="button"
              >
                <svg
                  class="h-4 w-4"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 256 256"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M216,48H176V40a24,24,0,0,0-24-24H104A24,24,0,0,0,80,40v8H40a8,8,0,0,0,0,16h8V208a16,16,0,0,0,16,16H192a16,16,0,0,0,16-16V64h8a8,8,0,0,0,0-16ZM96,40a8,8,0,0,1,8-8h48a8,8,0,0,1,8,8v8H96Zm96,168H64V64H192ZM112,104v64a8,8,0,0,1-16,0V104a8,8,0,0,1,16,0Zm48,0v64a8,8,0,0,1-16,0V104a8,8,0,0,1,16,0Z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <a
            aria-label="Load Palette Colors (Test Palette)"
            class="flex gap-1 h-8 rounded-lg cursor-pointer overflow-hidden"
            data-discover="true"
            href="/p/red-ff0000/blue-0000ff"
          >
            <span
              class="rounded-full shrink-0 size-8"
              style="background-color: rgb(255, 0, 0);"
            />
            <span
              class="rounded-full shrink-0 size-8"
              style="background-color: rgb(0, 0, 255);"
            />
          </a>
        </div>
      </div>
      <div
        class="flex flex-col relative overflow-hidden h-auto text-foreground box-border bg-content1 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 shadow-medium rounded-large transition-transform-background motion-reduce:transition-none w-full"
        data-uid="PaletteCard"
        tabindex="-1"
      >
        <div
          class="relative flex w-full flex-auto flex-col place-content-inherit align-items-inherit h-auto break-words text-left overflow-y-auto subpixel-antialiased p-4"
        >
          <div
            class="flex items-start mb-4"
          >
            <div
              class="grow space-y-0.5"
            >
              <h3
                class="font-semibold text-lg"
              >
                <a
                  aria-label="Load Palette (Second)"
                  class="flex hover:underline"
                  data-discover="true"
                  href="/p/red-ff0000/blue-0000ff"
                >
                  Second
                </a>
              </h3>
              <p
                class="text-xs text-default-500"
              >
                Jan 2, 2024
              </p>
            </div>
            <div
              class="flex items-center gap-0.5"
            >
              <button
                aria-label="Favorite Palette (Second)"
                class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 text-tiny gap-2 rounded-small px-0 !gap-0 transition-transform-colors-opacity motion-reduce:transition-none bg-transparent text-default-foreground data-[hover=true]:bg-default/40 min-w-8 w-8 h-8"
                data-react-aria-pressable="true"
                tabindex="0"
                type="button"
              >
                <svg
                  class="size-5"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 256 256"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M178,40c-20.65,0-38.73,8.88-50,23.89C116.73,48.88,98.65,40,78,40a62.07,62.07,0,0,0-62,62c0,70,103.79,126.66,108.21,129a8,8,0,0,0,7.58,0C136.21,228.66,240,172,240,102A62.07,62.07,0,0,0,178,40ZM128,214.8C109.74,204.16,32,155.69,32,102A46.06,46.06,0,0,1,78,56c19.45,0,35.78,10.36,42.6,27a8,8,0,0,0,14.8,0c6.82-16.67,23.15-27,42.6-27a46.06,46.06,0,0,1,46,46C224,155.61,146.24,204.15,128,214.8Z"
                  />
                </svg>
              </button>
              <button
                aria-expanded="false"
                aria-haspopup="dialog"
                aria-label="Remove Palette (Second)"
                class="group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 text-tiny gap-2 rounded-small px-0 !gap-0 transition-transform-colors-opacity motion-reduce:transition-none bg-transparent text-danger data-[hover=true]:bg-danger/20 min-w-8 w-8 h-8 z-10 aria-expanded:scale-[0.97] aria-expanded:opacity-70 subpixel-antialiased"
                data-react-aria-pressable="true"
                data-slot="trigger"
                tabindex="0"
                type="button"
              >
                <svg
                  class="h-4 w-4"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 256 256"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M216,48H176V40a24,24,0,0,0-24-24H104A24,24,0,0,0,80,40v8H40a8,8,0,0,0,0,16h8V208a16,16,0,0,0,16,16H192a16,16,0,0,0,16-16V64h8a8,8,0,0,0,0-16ZM96,40a8,8,0,0,1,8-8h48a8,8,0,0,1,8,8v8H96Zm96,168H64V64H192ZM112,104v64a8,8,0,0,1-16,0V104a8,8,0,0,1,16,0Zm48,0v64a8,8,0,0,1-16,0V104a8,8,0,0,1,16,0Z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <a
            aria-label="Load Palette Colors (Second)"
            class="flex gap-1 h-8 rounded-lg cursor-pointer overflow-hidden"
            data-discover="true"
            href="/p/red-ff0000/blue-0000ff"
          >
            <span
              class="rounded-full shrink-0 size-8"
              style="background-color: rgb(255, 0, 0);"
            />
            <span
              class="rounded-full shrink-0 size-8"
              style="background-color: rgb(0, 0, 255);"
            />
          </a>
        </div>
      </div>
    </div>
  </div>
  <footer
    class="w-full flex items-center justify-center gap-2 flex-wrap p-4 border-t border-default"
    data-uid="Footer"
  >
    <div
      data-uid="Contact"
    >
      <button
        class="text-base"
        type="button"
      >
        Feedback
      </button>
    </div>
    <span
      class="text-foreground-500"
    >
      ·
    </span>
    <a
      data-discover="true"
      href="/about"
    >
      About
    </a>
    <span
      class="text-foreground-500"
    >
      ·
    </span>
    <a
      href="https://x.com/gilbarbara"
      rel="noopener noreferrer"
      target="_blank"
    >
      @gilbarbara
    </a>
  </footer>
</div>
`;

exports[`Palettes > Render > shows sign in message when not authenticated 1`] = `
<div
  class="flex flex-col flex-1"
  data-uid="Palettes"
>
  <div
    class="w-full max-w-7xl mx-auto flex-1 pt-8 md:pt-16 px-4 md:px-8 pb-16 text-center"
  >
    <h1
      class="text-4xl font-bold mb-16"
    >
      My Palettes
    </h1>
    <div
      class="mx-auto text-center w-full max-w-150 p-4"
      data-testid="Feedback"
    >
      <div
        class=""
      >
        <p
          class="text-muted "
        >
          Sign in to view your saved palettes
        </p>
      </div>
      <div
        class="mt-6"
      >
        <button
          class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-primary text-primary-foreground data-[hover=true]:opacity-hover"
          data-react-aria-pressable="true"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M141.66,133.66l-40,40a8,8,0,0,1-11.32-11.32L116.69,136H24a8,8,0,0,1,0-16h92.69L90.34,93.66a8,8,0,0,1,11.32-11.32l40,40A8,8,0,0,1,141.66,133.66ZM200,32H136a8,8,0,0,0,0,16h56V208H136a8,8,0,0,0,0,16h64a8,8,0,0,0,8-8V40A8,8,0,0,0,200,32Z"
            />
          </svg>
          Sign In
        </button>
      </div>
    </div>
  </div>
  <footer
    class="w-full flex items-center justify-center gap-2 flex-wrap p-4 border-t border-default"
    data-uid="Footer"
  >
    <div
      data-uid="Contact"
    >
      <button
        class="text-base"
        type="button"
      >
        Feedback
      </button>
    </div>
    <span
      class="text-foreground-500"
    >
      ·
    </span>
    <a
      data-discover="true"
      href="/about"
    >
      About
    </a>
    <span
      class="text-foreground-500"
    >
      ·
    </span>
    <a
      href="https://x.com/gilbarbara"
      rel="noopener noreferrer"
      target="_blank"
    >
      @gilbarbara
    </a>
  </footer>
</div>
`;
